version/0.65/_sources/autoapi/pyedb/configuration/cfg_ports_sources/CfgNearestPinTerminalInfo.rst.txt






:class:`CfgNearestPinTerminalInfo`
==================================


.. py:class:: pyedb.configuration.cfg_ports_sources.CfgNearestPinTerminalInfo(pedb, **kwargs)

   Bases: :py:obj:`CfgTerminalInfo`



.. py:currentmodule:: CfgNearestPinTerminalInfo

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~export_properties`
            - 



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~reference_net`
            - 
          * - :py:attr:`~search_radius`
            - 






Import detail
-------------

.. code-block:: python

    from pyedb.configuration.cfg_ports_sources import CfgNearestPinTerminalInfo


Attribute detail
----------------

.. py:attribute:: reference_net

.. py:attribute:: search_radius



Method detail
-------------

.. py:method:: export_properties()




